--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     </ul>
   </nav>
   <main>
-    <div class="logo1" id="userElement">User:</div>
+    <div class="logo1" id="userElement1"></div>
     <div id="video-container">
           <div id="video1-1" class="video" style="display:none;">
             <!-- Embed the video for Class 1 -->
